# tw

./: .gitmodules
rpc_server/: CMakeLists.txt  Dockerfile
rpc_server/app/: CMakeLists.txt
rpc_server/app/idl/: CMakeLists.txt
rpc_server/app/idl/proto/gnmi/: gnmi.proto
rpc_server/app/libevent_adapter/: .CMakeLists.txt.swp  CMakeLists.txt
rpc_server/app/libevent_adapter/inc/: evt_adapter.hpp  interface.hpp  tcp_server.hpp
rpc_server/app/libevent_adapter/test/: .evt_adapter_test.cpp.swp  CMakeLists.txt  evt_adapter_test.cpp  evt_adapter_test.hpp
rpc_server/app/middleware/: CMakeLists.txt
rpc_server/app/middleware/inc/: app_interface.hpp  interface_impl.hpp
rpc_server/app/middleware/src/: app_interface.cpp  interface_impl.cpp
rpc_server/app/nghttp2_adapter/: CMakeLists.txt
rpc_server/app/nghttp2_adapter/inc/: http2_handler.hpp
rpc_server/app/nghttp2_adapter/src/: http2_handler.cpp  http2_rsp_builder.cpp
rpc_server/app/src/: app_main.cpp
rpc_server/libevent_adapter/: CMakeLists.txt
rpc_server/libevent_adapter/inc/: evt_adapter.hpp  server_app.hpp
rpc_server/libevent_adapter/src/: server_app.cpp
rpc_server/libevent_adapter/test/: CMakeLists.txt  evt_adapter_test.cpp  evt_adapter_test.hpp
rpc_server/middleware/inc/: app_interface.hpp
rpc_server/nghttp2_adapter/inc/: session.hpp
rpc_server/nghttp2_adapter/src/: session.cpp
server/: CMakeLists.txt
server/inc/: evt_adapter.hpp  io_adapter.hpp  io_events.hpp  io_operations.hpp  service_adapter.hpp
server/libevent_adapter/: CMakeLists.txt
server/libevent_adapter/inc/: app_interface.hpp  evt_adapter.hpp  io_events.hpp  io_operations.hpp  service_adapter.hpp
server/libevent_adapter/src/: app_interface.cpp  io_operations.cpp  service_adapter.cpp
server/libevent_adapter/test/: CMakeLists.txt  evt_adapter_test.cpp  evt_adapter_test.hpp
server/nghttp2_adapter/: CMakeLists.txt
server/nghttp2_adapter/inc/: session.hpp
server/nghttp2_adapter/src/: session.cpp
server/src/: evt_adapter.cpp  io_adapter.cpp  io_events.cpp  io_operations.cpp
server/test/: CMakeLists.txt  evt_adapter_test.cpp  evt_adapter_test.hpp  main.cpp
